# Eva-style

./: .gitignore  CHANGELOG.md  README.md  index.html  metadata.json  package-lock.json  package.json  release-notes.md  tsconfig.json  vite.config.ts
electron/: dataStore.cjs  githubStatus.cjs  main.cjs  preload.cjs  updater.cjs
public/: theme-boot.js
scripts/: build-icon.mjs  create-release.ps1  publish-release.ps1
src/: App.tsx  index.css  initialData.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: eva.toml
src-tauri/src/: data_store.rs  lib.rs  main.rs  paths.rs  updater.rs
src/__tests__/: backupData.test.ts  certificateUtils.test.ts  csvExport.test.ts  dailyFinanceUtils.test.ts  devHistoryDebt.test.ts  ownerPassword.test.ts  paymentUtils.test.ts  salaryUtils.test.ts  settingsUtils.test.ts
src/components/: AdminSalaries.tsx  AppDialogHost.tsx  CertificatesAndDebts.tsx  DailyAccounting.tsx  DevModePanel.tsx  GlobalSearch.tsx  HeaderClock.tsx  ImportPreviewModal.tsx  InteractiveHelp.tsx  MasterSalaries.tsx  ModalOverlay.tsx  OwnerFinanceCharts.tsx  OwnerPasswordPrompt.tsx  OwnerSection.tsx  ServiceCalculator.tsx  Solarium.tsx  ThemeToggle.tsx  UpdateModal.tsx  WelcomeOverlay.tsx  WhatsNewModal.tsx
src/data/: appVersion.ts  changelog.ts  helpContent.ts
src/desktop/: tauriBridge.ts
src/store/: AppStoreContext.tsx  index.ts  materialPrices.ts  migrations.ts  persistence.ts  reducer.ts  schema.ts
src/utils/: appDialog.ts  autoBackupRunner.ts  backupData.ts  backupImport.ts  (+19 more)
